--- a/worker-pod.yaml
+++ b/worker-pod.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: pod
 metadata:
-  name: voting-app
+  name: worker-app
   lables:
-    name: voting-app
+    name: worker-app
     app: demo-voting-app
 spec:
   containers:
     - name: voting-app
-      image: kodekloud/examplevotingapp_vote:v1
+      image: kodekloud/examplevotingapp_worker:v1
       ports: 
-        - conatainerPort: 80
+        - containerPort: 80
     
