--- a/redis.pod.yaml
+++ b/redis.pod.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
-kind: pod
+kind: Pod
 metadata:
   name: redis-app
-  lables:
+  labels:
     name: redis-app
     app: demo-voting-app
 spec:
