--- a/postgres-pod.yaml
+++ b/postgres-pod.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
-kind: pod
+kind: Pod
 metadata:
   name: postgres-db
-  lables:
+  labels:
     name: postgres-db
     app: demo-voting-app
 spec:
