--- a/result-pod.yaml
+++ b/result-pod.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
-kind: pod
+kind: Pod
 metadata:
   name: result-app
-  lables:
+  labels:
     name: result-app
     app: demo-voting-app
 spec:
