--- a/worker-pod.yaml
+++ b/worker-pod.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
-kind: pod
+kind: Pod
 metadata:
   name: worker-app
-  lables:
+  labels:
     name: worker-app
     app: demo-voting-app
 spec:
