--- a/postgres-pod.yaml
+++ b/postgres-pod.yaml
@@ -13,9 +13,11 @@ spec:
         - containerPort: 5432
       env:
         - name: POSTGRES_USER
-          value: "postgres"
+          value: postgres
         - name: POSTGRES_PASSWORD
-          value: "postgres"
+          value: postgres
+        - name: POSTGRES_HOST_AUTH_METHOD
+          value: trust
 
 
     
